src/components/ChatMessages/ChatMessages.css
.chat-container {
    margin: 0 auto;
    max-width: 800px;  
    padding: 20px;
  }
  
  .chat-message {
    border-top: 1px solid;
    border-color: #1abc9c;
    padding: 10px;
    min-height: 75px;
    display: block;
    margin: 3px;
    width: 90%;
    text-align: start;
    color: lightgray;
  }
  
  .chat-message-body {
    margin-top: 5px;
    text-align: justify;
  }
  
  .chat-message-header {
    font-size: 12px;
  }
  
  .chat-message:hover {
    background-color: #222;
  }
    
  

